Cross platform fit, fix drag region, adjust window control spacing (#691)

--- a/dapp/index.styl
+++ b/dapp/index.styl
@@ -56,7 +56,6 @@ body
       width 72px
       padding-left 2px
       -webkit-user-select none
-      -webkit-app-region drag
       display none
 
       .accountTile
@@ -101,7 +100,6 @@ body
           overflow-y scroll
           overflow-x hidden
           -webkit-user-select auto
-          -webkit-app-region none
 
           .dappIconsWrap
             padding-top 10px
@@ -118,20 +116,9 @@ body
       justify-content center
       align-items center
       -webkit-user-select none
-      -webkit-app-region drag
       // overflow-y scroll
       z-index 9999
-
-      .mainDappBackgroundTop
-        position absolute
-        top 0
-        left 0
-        right 0
-        height 32px
-        -webkit-user-select none
-        -webkit-app-region drag
-        z-index 2
-
+      
       .mainDappBackground
         position absolute
         top 0
@@ -139,7 +126,6 @@ body
         bottom 0
         right 0
         -webkit-user-select none
-        -webkit-app-region drag
         z-index 1
         display flex
         justify-content center
@@ -200,7 +186,6 @@ body
         justify-content center
         align-items center
         font-size 12px
-        -webkit-app-region drag
         font-weight 300
         letter-spacing 1px
         pointer-events none
@@ -297,5 +282,5 @@ body
         width 100%
         // border-radius 6px
 
-@import './Native/style'
+@import './App/Native/style'
 @import './App/DappTile/style'
